--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,3 +1,5 @@
+<link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet">
+<script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>
 <!DOCTYPE html>
 <html>
 <head>
@@ -6,9 +8,11 @@
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
-<body>
-
-<%= yield %>
-
+<body>	
+	<%= render 'layouts/header' =%>
+		<div class="container">
+			<%= yield %>
+			<%= render 'layouts/footer' =%>
+		</div>
 </body>
 </html>
