--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,22 @@
-<h1>Footsteps</h1>
-<p>DePaul University HCI 530 final project</p>
+
+<div class="container-fluid">
+  <div class="well">
+         <div class="row-fluid">
+          <div class="span6">
+            <h1 class="hidden-phone" id="title">Footsteps</h1>
+            <h2 id="subtitle" class="hidden-phone">DePaul University HCI 530 final project.</h2><div class="spacer-10"></div>
+         
+          </div>
+              <div class="span6">
+                <h1 id="title" class="visible-phone">
+                  Footsteps</h1>
+                  <h2 id="subtitle"class="visible-phone"><%= link_to  "Sign Up Now!", '#', class: "btn btn-large btn-primary"%></h2>
+              <div class="hidden-phone">
+                  <%= link_to  "Sign Up Now!", '#', class: "btn btn-large btn-primary"%>
+                    
+                  </div>
+              </div>
+        </div>
+  </div>
+</div>
+
