--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -12,7 +12,7 @@
                   Footsteps</h1>
                   <h2 id="subtitle"class="visible-phone"><%= link_to  "Sign Up Now!", '#', class: "btn btn-large btn-primary"%></h2>
               <div class="hidden-phone">
-                  <%= link_to  "Sign Up Now!", '#', class: "btn btn-large btn-primary"%>
+                  <%= link_to  "Sign Up Now!", new_user_registration_path, class: "btn btn-large btn-primary"%>
                     
                   </div>
               </div>
